--- a/src/main/resources/templates/admin/admin_portal.html
+++ b/src/main/resources/templates/admin/admin_portal.html
@@ -96,9 +96,7 @@
                 Maneja las lecciones que se podrán leer en Planeta Arrupe.
               </p>
               <div class="d-grid gap-2">
-                <a
-                  class="btn btn-primary text-dark rounded-pill btn-sm"
-                  href="/lecciones"
+                <a class="btn btn-primary text-dark btn-sm" href="/lecciones"
                   >Ir a Lecciones</a
                 >
               </div>
@@ -115,7 +113,7 @@
               </p>
               <div class="d-grid gap-2">
                 <a
-                  class="btn btn-primary text-dark rounded-pill btn-sm"
+                  class="btn btn-primary text-dark btn-sm"
                   href="/pruebas-admin"
                   >Ir a Pruebas</a
                 >
@@ -132,9 +130,7 @@
                 Arrupe.
               </p>
               <div class="d-grid gap-2">
-                <a
-                  class="btn btn-primary text-dark rounded-pill btn-sm"
-                  href="/usuarios"
+                <a class="btn btn-primary text-dark btn-sm" href="/usuarios"
                   >Ir a Usuarios</a
                 >
               </div>
@@ -150,9 +146,7 @@
                 Arrupe.
               </p>
               <div class="d-grid gap-2">
-                <a
-                  class="btn btn-primary text-dark rounded-pill btn-sm"
-                  href="/roles"
+                <a class="btn btn-primary text-dark btn-sm" href="/roles"
                   >Ir a Roles</a
                 >
               </div>
@@ -167,9 +161,7 @@
                 Maneja los grados que estarán disponibles en Planeta Arrupe.
               </p>
               <div class="d-grid gap-2">
-                <a
-                  class="btn btn-primary text-dark rounded-pill btn-sm"
-                  href="/grados"
+                <a class="btn btn-primary text-dark btn-sm" href="/grados"
                   >Ir a Grados</a
                 >
               </div>
@@ -184,9 +176,7 @@
                 Maneja las secciones que estarán disponibles en Planeta Arrupe.
               </p>
               <div class="d-grid gap-2">
-                <a
-                  class="btn btn-primary text-dark rounded-pill btn-sm"
-                  href="/secciones"
+                <a class="btn btn-primary text-dark btn-sm" href="/secciones"
                   >Ir a Secciones</a
                 >
               </div>
@@ -203,7 +193,7 @@
               </p>
               <div class="d-grid gap-2">
                 <a
-                  class="btn btn-primary text-dark rounded-pill btn-sm"
+                  class="btn btn-primary text-dark btn-sm"
                   href="/niveles-educativos"
                   >Ir a Niveles Educativos</a
                 >
