--- a/src/main/resources/templates/admin/pruebas/agregar_prueba.html
+++ b/src/main/resources/templates/admin/pruebas/agregar_prueba.html
@@ -181,7 +181,7 @@
               <button
                 type="button"
                 id="agregarPruebaBtn"
-                class="btn btn-primary text-dark rounded-pill btn-sm"
+                class="btn btn-primary text-dark btn-sm"
               >
                 Agregar Prueba
               </button>
@@ -192,7 +192,7 @@
               <button
                 type="button"
                 id="agregarPreguntaBtn"
-                class="btn btn-primary text-dark rounded-pill btn-sm"
+                class="btn btn-primary text-dark btn-sm"
               >
                 Agregar otra Pregunta
               </button>
