--- a/src/main/resources/templates/admin/usuarios/agregar_usuario.html
+++ b/src/main/resources/templates/admin/usuarios/agregar_usuario.html
@@ -219,9 +219,7 @@
           </div>
         </div>
         <div class="mb-3 d-grid gap-2">
-          <button class="btn btn-primary text-dark rounded-pill btn-sm">
-            Guardar
-          </button>
+          <button class="btn btn-primary text-dark btn-sm">Guardar</button>
         </div>
         <hr />
         <div class="mb-3">
