--- a/src/main/resources/templates/admin/usuarios/agregar_usuarios_csv.html
+++ b/src/main/resources/templates/admin/usuarios/agregar_usuarios_csv.html
@@ -87,7 +87,7 @@
           <button
             type="button"
             id="submitBtn"
-            class="btn btn-primary text-dark rounded-pill btn-sm"
+            class="btn btn-primary text-dark btn-sm"
           >
             Agregar
           </button>
