--- a/src/main/resources/templates/admin/usuarios/buscar_usuario.html
+++ b/src/main/resources/templates/admin/usuarios/buscar_usuario.html
@@ -175,9 +175,7 @@
           </div>
         </div>
         <div class="mb-3 d-grid gap-2">
-          <button class="btn btn-primary text-dark rounded-pill btn-sm">
-            Buscar
-          </button>
+          <button class="btn btn-primary text-dark btn-sm">Buscar</button>
         </div>
         <hr />
       </form>
@@ -254,38 +252,38 @@
         <div class="row">
           <div class="col-md-6">
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">
+              <li class="list-group-item list-group-item-success">
                 <b>Nombres: </b>${usuario[2]}
               </li>
-              <li class="list-group-item">
+              <li class="list-group-item list-group-item-success">
                 <b>N° Carné: </b>${usuario[1]}
               </li>
-              <li class="list-group-item">
+              <li class="list-group-item list-group-item-success">
                 <b>Estado: </b>${usuario[15]}
               </li>
-              <li class="list-group-item">
+              <li class="list-group-item list-group-item-success">
                 <b>Grado: </b>${usuario[8]}
               </li>
-              <li class="list-group-item">
+              <li class="list-group-item list-group-item-success">
                 <b>Nivel Educativo: </b>${usuario[12]}
               </li>
             </ul>
           </div>
           <div class="col-md-6">
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">
+              <li class="list-group-item list-group-item-success">
                 <b>Apellidos: </b>${usuario[3]}
               </li>
-              <li class="list-group-item">
+              <li class="list-group-item list-group-item-success">
                 <b>Correo: </b>${usuario[13]}
               </li>
-              <li class="list-group-item">
+              <li class="list-group-item list-group-item-success">
                 <b>Número de Teléfono: </b>${usuario[14]}
               </li>
-              <li class="list-group-item">
+              <li class="list-group-item list-group-item-success">
                 <b>Rol: </b>${usuario[6]}
               </li>
-              <li class="list-group-item">
+              <li class="list-group-item list-group-item-success">
                 <b>Sección: </b>${usuario[10]}
               </li>
             </ul>
