--- a/src/main/resources/templates/admin/usuarios/detalle_usuario.html
+++ b/src/main/resources/templates/admin/usuarios/detalle_usuario.html
@@ -82,22 +82,22 @@
         <div class="row">
           <div class="col-md-6">
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">
+              <li class="list-group-item list-group-item-success">
                 <b>Nombres: </b><span th:text="${usuario.nombre}"></span>
               </li>
-              <li class="list-group-item">
+              <li class="list-group-item list-group-item-success">
                 <b>N° Carné: </b><span th:text="${usuario.carnet}"></span>
               </li>
-              <li class="list-group-item">
+              <li class="list-group-item list-group-item-success">
                 <b>Contraseña: </b><span th:text="${usuario.contrasena}"></span>
               </li>
-              <li class="list-group-item">
+              <li class="list-group-item list-group-item-success">
                 <b>Estado: </b><span th:text="${usuario.estado}"></span>
               </li>
-              <li class="list-group-item">
+              <li class="list-group-item list-group-item-success">
                 <b>Grado: </b><span th:text="${usuario.gradoNombre}"></span>
               </li>
-              <li class="list-group-item">
+              <li class="list-group-item list-group-item-success">
                 <b>Nivel Educativo: </b
                 ><span th:text="${usuario.nivelEducativoNombre}"></span>
               </li>
@@ -105,20 +105,20 @@
           </div>
           <div class="col-md-6">
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">
+              <li class="list-group-item list-group-item-success">
                 <b>Apellidos: </b><span th:text="${usuario.apellido}"></span>
               </li>
-              <li class="list-group-item">
+              <li class="list-group-item list-group-item-success">
                 <b>Correo: </b><span th:text="${usuario.correo}"></span>
               </li>
-              <li class="list-group-item">
+              <li class="list-group-item list-group-item-success">
                 <b>Número de Teléfono: </b
                 ><span th:text="${usuario.numero}"></span>
               </li>
-              <li class="list-group-item">
+              <li class="list-group-item list-group-item-success">
                 <b>Rol: </b><span th:text="${usuario.rolNombre}"></span>
               </li>
-              <li class="list-group-item">
+              <li class="list-group-item list-group-item-success">
                 <b>Sección: </b><span th:text="${usuario.seccionNombre}"></span>
               </li>
             </ul>
