--- a/src/main/resources/templates/docente/docente_portal.html
+++ b/src/main/resources/templates/docente/docente_portal.html
@@ -92,7 +92,7 @@
               </p>
               <div class="d-grid gap-2">
                 <a
-                  class="btn btn-primary text-dark rounded-pill btn-sm"
+                  class="btn btn-primary text-dark btn-sm"
                   href="/lecciones-docente"
                   >Ir a Lecciones</a
                 >
@@ -110,7 +110,7 @@
               </p>
               <div class="d-grid gap-2">
                 <a
-                  class="btn btn-primary text-dark rounded-pill btn-sm"
+                  class="btn btn-primary text-dark btn-sm"
                   href="/pruebas-docente"
                   >Ir a Pruebas</a
                 >
