--- a/src/main/resources/templates/admin/lecciones/vista_lecciones.html
+++ b/src/main/resources/templates/admin/lecciones/vista_lecciones.html
@@ -74,9 +74,7 @@
         </div>
       </div>
       <div class="d-grid gap-2 mb-3 mx-5">
-        <a
-          class="btn btn-primary text-dark rounded-pill btn-sm"
-          href="/agregar-leccion"
+        <a class="btn btn-primary text-dark btn-sm" href="/agregar-leccion"
           >Agregar Lección</a
         >
       </div>
@@ -100,7 +98,7 @@
             <td th:text="${leccion.estado}"></td>
             <td class="d-grid gap-2">
               <a
-                class="btn btn-secondary btn-sm rounded-pill"
+                class="btn btn-secondary btn-sm"
                 th:href="@{'/editar-nivel/' + ${leccion.id}}"
                 >Editar</a
               >
