--- a/src/main/resources/templates/admin/niveles-educativos/vista_niveles.html
+++ b/src/main/resources/templates/admin/niveles-educativos/vista_niveles.html
@@ -75,27 +75,23 @@
         </div>
       </div>
       <div class="d-grid gap-2 mb-3 mx-5">
-        <a
-          class="btn btn-primary text-dark rounded-pill btn-sm"
-          href="/agregar-nivel"
+        <a class="btn btn-primary text-dark btn-sm" href="/agregar-nivel"
           >Agregar Nivel Educativo</a
         >
       </div>
       <table class="table">
         <thead>
           <tr>
-            <th>ID</th>
-            <th>Nombre</th>
-            <th>Acciones</th>
+            <th style="width: 80% !important">Nombre</th>
+            <th class="text-center">Acciones</th>
           </tr>
         </thead>
         <tbody>
           <tr th:each="nivel : ${niveles}">
-            <td th:text="${nivel.id}"></td>
-            <td th:text="${nivel.nombre}"></td>
+            <td style="width: 80% !important" th:text="${nivel.nombre}"></td>
             <td class="d-grid gap-2">
               <a
-                class="btn btn-secondary btn-sm rounded-pill"
+                class="btn btn-secondary btn-sm"
                 th:href="@{'/editar-nivel/' + ${nivel.id}}"
                 >Editar</a
               >
