--- a/src/main/resources/templates/admin/pruebas/estado_prueba.html
+++ b/src/main/resources/templates/admin/pruebas/estado_prueba.html
@@ -91,7 +91,7 @@
           </select>
         </div>
         <div class="mb-3 d-grid gap-2">
-          <button class="btn btn-primary text-dark rounded-pill btn-sm">
+          <button class="btn btn-primary text-dark btn-sm">
             Cambiar Estado
           </button>
         </div>
