--- a/src/main/resources/templates/admin/pruebas/vincular_prueba.html
+++ b/src/main/resources/templates/admin/pruebas/vincular_prueba.html
@@ -124,7 +124,7 @@
           </select>
         </div>
         <div class="mb-3 d-grid gap-2">
-          <button class="btn btn-primary text-dark rounded-pill btn-sm">
+          <button class="btn btn-primary text-dark btn-sm">
             Vincular Prueba con Lección
           </button>
         </div>
