--- a/src/main/resources/templates/admin/pruebas/vista_pruebas.html
+++ b/src/main/resources/templates/admin/pruebas/vista_pruebas.html
@@ -85,7 +85,7 @@
               </p>
               <div class="d-grid gap-2">
                 <a
-                  class="btn btn-primary text-dark rounded-pill btn-sm"
+                  class="btn btn-primary text-dark btn-sm"
                   href="/agregar-prueba"
                   >Agregar Pruebas</a
                 >
@@ -104,7 +104,7 @@
               </p>
               <div class="d-grid gap-2">
                 <a
-                  class="btn btn-primary text-dark rounded-pill btn-sm"
+                  class="btn btn-primary text-dark btn-sm"
                   href="/vincular-prueba"
                   >Vincular Prueba</a
                 >
