--- a/src/main/resources/templates/admin/roles/editar_rol.html
+++ b/src/main/resources/templates/admin/roles/editar_rol.html
@@ -86,9 +86,7 @@
           />
         </div>
         <div class="mb-3 d-grid gap-2">
-          <button class="btn btn-primary text-dark rounded-pill btn-sm">
-            Guardar
-          </button>
+          <button class="btn btn-primary text-dark btn-sm">Guardar</button>
         </div>
         <hr />
         <div class="mb-3">
