--- a/src/main/resources/templates/admin/secciones/vista_secciones.html
+++ b/src/main/resources/templates/admin/secciones/vista_secciones.html
@@ -74,27 +74,23 @@
         </div>
       </div>
       <div class="d-grid gap-2 mb-3 mx-5">
-        <a
-          class="btn btn-primary text-dark rounded-pill btn-sm"
-          href="/agregar-seccion"
+        <a class="btn btn-primary text-dark btn-sm" href="/agregar-seccion"
           >Agregar Sección</a
         >
       </div>
       <table class="table">
         <thead>
           <tr>
-            <th>ID</th>
-            <th>Nombre</th>
-            <th>Acciones</th>
+            <th style="width: 80% !important">Nombre</th>
+            <th class="text-center">Acciones</th>
           </tr>
         </thead>
         <tbody>
           <tr th:each="seccion : ${secciones}">
-            <td th:text="${seccion.id}"></td>
-            <td th:text="${seccion.nombre}"></td>
+            <td style="width: 80% !important" th:text="${seccion.nombre}"></td>
             <td class="d-grid gap-2">
               <a
-                class="btn btn-secondary btn-sm rounded-pill"
+                class="btn btn-secondary btn-sm"
                 th:href="@{'/editar-seccion/' + ${seccion.id}}"
                 >Editar</a
               >
