--- a/src/main/resources/templates/docente/lecciones/agregar_leccion.html
+++ b/src/main/resources/templates/docente/lecciones/agregar_leccion.html
@@ -82,7 +82,7 @@
         <div class="mb-3 d-grid gap-2">
           <button
             type="button"
-            class="btn btn-primary text-dark rounded-pill btn-sm ms-3"
+            class="btn btn-primary text-dark btn-sm ms-3"
             id="guardarBtn"
           >
             Subir Imágenes
@@ -151,9 +151,7 @@
           </select>
         </div>
         <div class="mb-3 d-grid gap-2">
-          <button class="btn btn-primary text-dark rounded-pill btn-sm">
-            Guardar
-          </button>
+          <button class="btn btn-primary text-dark btn-sm">Guardar</button>
         </div>
         <hr />
         <div class="mb-3">
