--- a/src/main/resources/templates/docente/lecciones/vista_lecciones.html
+++ b/src/main/resources/templates/docente/lecciones/vista_lecciones.html
@@ -70,7 +70,7 @@
       </div>
       <div class="d-grid gap-2 mb-3 mx-5">
         <a
-          class="btn btn-primary text-dark rounded-pill btn-sm"
+          class="btn btn-primary text-dark btn-sm"
           href="/agregar-leccion-docente"
           >Agregar Lección</a
         >
@@ -95,7 +95,7 @@
             <td th:text="${leccion.estado}"></td>
             <td class="d-grid gap-2">
               <a
-                class="btn btn-secondary btn-sm rounded-pill"
+                class="btn btn-secondary btn-sm"
                 th:href="@{'/editar-nivel/' + ${leccion.id}}"
                 >Editar</a
               >
