--- a/src/main/resources/templates/docente/pruebas/agregar_prueba.html
+++ b/src/main/resources/templates/docente/pruebas/agregar_prueba.html
@@ -176,7 +176,7 @@
               <button
                 type="button"
                 id="agregarPruebaBtn"
-                class="btn btn-primary text-dark rounded-pill btn-sm"
+                class="btn btn-primary text-dark btn-sm"
               >
                 Agregar Prueba
               </button>
@@ -187,7 +187,7 @@
               <button
                 type="button"
                 id="agregarPreguntaBtn"
-                class="btn btn-primary text-dark rounded-pill btn-sm"
+                class="btn btn-primary text-dark btn-sm"
               >
                 Agregar otra Pregunta
               </button>
