--- a/src/main/resources/templates/docente/pruebas/vista_pruebas.html
+++ b/src/main/resources/templates/docente/pruebas/vista_pruebas.html
@@ -80,7 +80,7 @@
               </p>
               <div class="d-grid gap-2">
                 <a
-                  class="btn btn-primary text-dark rounded-pill btn-sm"
+                  class="btn btn-primary text-dark btn-sm"
                   href="/agregar-prueba-docente"
                   >Agregar Pruebas</a
                 >
@@ -99,7 +99,7 @@
               </p>
               <div class="d-grid gap-2">
                 <a
-                  class="btn btn-primary text-dark rounded-pill btn-sm"
+                  class="btn btn-primary text-dark btn-sm"
                   href="/vincular-prueba-docente"
                   >Vincular Prueba</a
                 >
