--- a/src/main/resources/templates/ingreso.html
+++ b/src/main/resources/templates/ingreso.html
@@ -74,7 +74,7 @@
                 />
               </div>
               <div class="mb-3 pt-3 d-grid gap-2">
-                <button class="btn btn-primary text-dark rounded-pill btn-sm">
+                <button class="btn btn-primary text-dark btn-sm">
                   Ingresar
                 </button>
               </div>
