Arreglo de cosass de la ui

--- a/src/main/resources/templates/estudiante/estudiante_portal.html
+++ b/src/main/resources/templates/estudiante/estudiante_portal.html
@@ -110,10 +110,13 @@
       <div class="bitacora-container">
         <div class="card bg-dark border-0">
           <h5
-            class="card-title text-center py-3 rowdies-regular fs-4 text-light"
+            class="card-title text-center pt-3 pb-2 rowdies-regular fs-4 text-light"
           >
             Mi bitácora de vuelo
           </h5>
+          <div class="mb-2 small text-light text-center">
+            ¡Muchos Éxitos, tú puedes!
+          </div>
           <div class="card-body">
             <div class="d-flex align-items-center gap-2 mb-3">
               <span class="text-light" style="width: 150px">Nivel Literal</span>
